Working on communication with the main application and fixing bugs